<resources>
	<string name="app_name">Pizzera</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>

	<string name="menu_chat">Chat</string>
	<string name="menu_schedule">Schedule</string>
	<string name="menu_login">Login</string>
	<string name="adress_email">Adress email</string>
	<string name="password">Password</string>
	<string name="log_in">log in</string>
	<string name="Hello">Hello</string>
	<string name="await">"Wait: "%1$d" sec"</string>
	<string name="remember_me">Remember me</string>
	<string name="Button">Button</string>
	<string name="please_enter_your_email_address">Please Enter Your Email Address</string>
	<string name="send">Send</string>
	<string name="there_is_no_such_user">There is no such user!</string>
	<string name="menu_register">Register</string>
	<string name="menu_logout">Logout</string>
	<string name="menu_workers_list">Workers list</string>
	<string name="unknown">Uknown</string>
	<string name="home">Home</string>

	<string name="hello_blank_fragment">Hello blank fragment</string>

	<string name="mon">mon</string>
	<string name="tue">tue</string>
	<string name="wed">wed</string>
	<string name="thu">thu</string>
	<string name="fri">fri</string>

	<string name="_12am">12am</string>
	<string name="_1am">1am</string>
	<string name="_2am">2am</string>
	<string name="_3am">3am</string>
	<string name="_7am">7am</string>
	<string name="_6am">6am</string>
	<string name="_4am">4am</string>
	<string name="_5am">5am</string>
	<string name="_11pm">11pm</string>
	<string name="_10pm">10pm</string>
	<string name="_9pm">9pm</string>
	<string name="_8pm">8pm</string>
	<string name="_7pm">7pm</string>
	<string name="_6pm">6pm</string>
	<string name="_5pm">5pm</string>
	<string name="_4pm">4pm</string>
	<string name="_3pm">3pm</string>
	<string name="_2pm">2pm</string>
	<string name="_1pm">1pm</string>
	<string name="_12pm">12pm</string>
	<string name="_11am">11am</string>
	<string name="_10am">10am</string>
	<string name="_9am">9am</string>
	<string name="_8am">8am</string>

	<string-array name="products">
		<item>first</item>
		<item>two</item>
		<item>three</item>
	</string-array>

	<string-array name="vendors">
		<item>first</item>
	</string-array>

	<string name="updating">updating</string>
</resources>
