<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#34445D"
	tools:context=".login.LoginFragment">

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="50dp"
		android:fontFamily="sans-serif"
		android:gravity="center"
		android:padding="10dp"
		android:text="@string/Hello"
		android:textColor="#FBFBFB"
		android:textSize="50sp"
		app:layout_constraintBottom_toTopOf="@+id/loginLinearLayout"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.501" />

	<LinearLayout
		android:id="@+id/loginLinearLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="35dp"
		android:layout_marginBottom="1dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toTopOf="@+id/progressBar"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView2">

		<EditText
			android:id="@+id/email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="10dp"
			android:layout_marginTop="10dp"
			android:layout_marginEnd="10dp"
			android:drawableStart="@drawable/ic_email"
			android:ems="10"
			android:fontFamily="sans-serif"
			android:gravity="start"
			android:hint="@string/adress_email"
			android:importantForAutofill="no"
			android:inputType="textEmailAddress"
			android:padding="10dp"
			android:textAlignment="gravity"
			android:textAllCaps="false"
			android:textColor="#FFF"
			android:textColorHighlight="#FFFFFF"
			android:textColorHint="#FFFFFF"
			android:textColorLink="#FFFFFF" />

		<EditText
			android:id="@+id/password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="10dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="10dp"
			android:layout_marginBottom="8dp"
			android:drawableStart="@drawable/ic_lock"
			android:ems="10"
			android:fontFamily="sans-serif"
			android:gravity="start"
			android:hint="@string/password"
			android:importantForAutofill="no"
			android:inputType="textPassword"
			android:padding="10dp"
			android:textAlignment="gravity"
			android:textColor="#FFF"
			android:textColorHighlight="#FFFFFF"
			android:textColorHint="#FFFFFF"
			android:textColorLink="#FFFFFF" />

		<CheckBox
			android:id="@+id/checkBoxRememberMe"
			android:layout_width="191dp"
			android:layout_height="35dp"
			android:layout_marginStart="10dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="10dp"
			android:layout_marginBottom="5dp"
			android:padding="6dp"
			android:text="@string/remember_me"
			android:textColor="#FFFFFF"
			android:textSize="18sp" />

		<TextView
			android:id="@+id/timerText"
			android:layout_width="match_parent"
			android:layout_height="25dp"
			android:layout_marginStart="10dp"
			android:layout_marginTop="10dp"
			android:layout_marginEnd="10dp"
			android:layout_marginBottom="8dp"
			android:fontFamily="sans-serif"
			android:gravity="center"
			android:padding="2dp"
			android:textSize="18sp"
			android:textColor="#FFFFFF"
			android:visibility="invisible" />
		<Button
			android:id="@+id/loginButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="10dp"
			android:layout_marginTop="5dp"
			android:layout_marginEnd="10dp"
			android:layout_marginBottom="10dp"
			android:background="#16AFB7"
			android:clickable="true"
			android:focusable="true"
			android:fontFamily="sans-serif"
			android:padding="8dp"
			android:text="@string/log_in"
			android:textColor="#FFFFFF" />
	</LinearLayout>

	<ProgressBar
		android:id="@+id/progressBar"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:visibility="invisible"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/loginLinearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>